# ChangeLog for dev-lang/moarvm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/moarvm/ChangeLog,v 1.11 2014/03/31 05:18:30 patrick Exp $

*moarvm-2014.03 (31 Mar 2014)

  31 Mar 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.03.ebuild:
  Bump

*moarvm-2014.02-r1 (17 Mar 2014)

  17 Mar 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.02-r1.ebuild:
  Improve src_install #504712

*moarvm-2014.02 (26 Feb 2014)

  26 Feb 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.02.ebuild:
  Bump

*moarvm-2014.01 (18 Feb 2014)

  18 Feb 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.01.ebuild:
  Bump, new homepage and proper tarballs

  15 Jan 2014; Patrick Lauer <patrick@gentoo.org> moarvm-2013.10.ebuild,
  moarvm-9999.ebuild:
  Whitespace, silence repoman

  09 Jan 2014; Patrick Lauer <patrick@gentoo.org> +files/Configure-9999.patch,
  moarvm-9999.ebuild:
  Hack up -9999 ebuild to have a chance of working with nqp

*moarvm-9999 (09 Jan 2014)

  09 Jan 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-9999.ebuild:
  Add -9999 ebuild

  09 Jan 2014; Patrick Lauer <patrick@gentoo.org> moarvm-2013.10.1.ebuild,
  moarvm-2013.10.ebuild:
  Fix homepage

  06 Dec 2013; Patrick Lauer <patrick@gentoo.org> moarvm-2013.10.1.ebuild:
  Hack in version so that build system doesn't make us sad

*moarvm-2013.10.1 (06 Dec 2013)

  06 Dec 2013; Patrick Lauer <patrick@gentoo.org> +moarvm-2013.10.1.ebuild:
  Bump to current HEAD as nqp relies on newer features

*moarvm-2013.10 (06 Dec 2013)

  06 Dec 2013; Patrick Lauer <patrick@gentoo.org> +files/Configure.patch,
  +metadata.xml, +moarvm-2013.10.ebuild:
  Initial commit, dependency of nqp/rakudo