@@ -1,4 +1,5 @@
 DEFINED_PHASES=configure install prepare
+DEPEND=dev-lang/perl
 DESCRIPTION=A 6model-based VM for NQP and Rakudo Perl 6
 EAPI=5
 HOMEPAGE=https://github.com/MoarVM/MoarVM
@@ -8,4 +9,4 @@ LICENSE=Artistic-2
 SLOT=0
 SRC_URI=http://gentooexperimental.org/~patrick/MoarVM-2013.10.tar.bz2
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=735f050f796cc3e18a4f86dee674e446
+_md5_=1bbeef9d78dd04d205db5e64fe75c558
