@@ -1,5 +1,5 @@
 DEFINED_PHASES=configure install
-DEPEND=dev-libs/libuv
+DEPEND=dev-libs/libuv dev-lang/perl
 DESCRIPTION=A 6model-based VM for NQP and Rakudo Perl 6
 EAPI=5
 HOMEPAGE=http://moarvm.org
@@ -10,4 +10,4 @@ RDEPEND=dev-libs/libuv
 SLOT=0
 SRC_URI=http://moarvm.org/releases/MoarVM-2014.02.tar.gz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=af954ab5add12098aa57133297291e2b
+_md5_=a3ea6da03eb585117f7a3448804b430e
