@@ -1,5 +1,5 @@
 DEFINED_PHASES=configure install prepare unpack
-DEPEND=>=dev-vcs/git-1.8.2.1
+DEPEND=dev-lang/perl >=dev-vcs/git-1.8.2.1
 DESCRIPTION=A 6model-based VM for NQP and Rakudo Perl 6
 EAPI=5
 HOMEPAGE=https://github.com/MoarVM/MoarVM
@@ -7,4 +7,4 @@ IUSE=doc
 LICENSE=Artistic-2
 SLOT=0
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	git-r3	6b256c6cd82cd5989bcb82e80a0fbac9	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=427fdd04469b0174a4e907a423950357
+_md5_=c04d4b113f4f622b9c2187d58b3a2ddb
